# Stratum

./: .gitignore  README.md  debug_retrieval.py  k- --include=.py --include=.js --include=.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  theme.js
infrastructure/: .env.example  docker-compose.yml  prometheus.yml
libs/: pyproject.toml
libs/stratum_libs/: auth.py  config.py  db.py  logging.py  pfi_compat.py  redis.py
libs/stratum_libs/models/: base.py  common.py
services/connectors/: .env.example  Dockerfile  pyproject.toml
services/connectors/alembic/: env.py
services/connectors/alembic/versions/: f5b2bc2745d7_initial_connectors_schema.py
services/connectors/app/: crypto.py  dependencies.py  main.py
services/connectors/app/connectors/: base.py  github.py  jira.py  slack.py
services/connectors/app/core/: config.py
services/connectors/app/models/: connector.py  connector_run.py
services/connectors/app/repositories/: connector.py  run.py
services/connectors/app/routers/: connectors.py  webhooks.py
services/connectors/app/schemas/: connector.py  run.py
services/connectors/app/workers/: sync_worker.py
services/evaluation/: Dockerfile  pyproject.toml
services/evaluation/alembic/: env.py
services/evaluation/alembic/versions/: a3b4c5d6e7f8_initial_evaluation_schema.py
services/evaluation/app/: main.py
services/evaluation/app/core/: config.py  evaluator.py
services/evaluation/app/models/: __init__.py  evaluation.py
services/evaluation/app/repositories/: evaluation.py
services/evaluation/app/routers/: evaluation.py  quality.py
services/evaluation/app/schemas/: evaluation.py
services/gateway/: .env.example  Dockerfile  pyproject.toml
services/gateway/app/: main.py
services/gateway/app/core/: config.py  rate_limit.py  security.py
services/gateway/app/middleware/: auth.py  context.py
services/gateway/app/routers/: dashboard.py  proxy.py
services/identity/: .env.example  Dockerfile  pyproject.toml
services/identity/alembic/: env.py
services/identity/alembic/versions/: 025d30cdcf3e_initial_identity_schema.py
services/identity/app/: main.py
services/identity/app/core/: config.py  dependencies.py  security.py
services/identity/app/models/: __init__.py  role.py  tenant.py  token.py  user.py
services/identity/app/repositories/: role.py  tenant.py  token.py  user.py
services/identity/app/routers/: auth.py  tenants.py  users.py
services/identity/app/schemas/: auth.py  tenant.py  token.py  user.py
services/identity/app/services/: auth.py  tenants.py  users.py
services/ingestion/: .env.example  Dockerfile  pyproject.toml
services/ingestion/alembic/: env.py
services/ingestion/alembic/versions/: 1e8e56aa4447_initial_ingestion_schema.py
services/ingestion/app/: dependencies.py  main.py
services/ingestion/app/chunking/: base.py  code_block.py  heading_aware.py  no_split.py  preprocessor.py  recursive_char.py  router.py
services/ingestion/app/core/: config.py
services/ingestion/app/embedding/: encoder.py  indexer.py
services/ingestion/app/models/: __init__.py  chunk.py  document.py
services/ingestion/app/repositories/: chunk.py  document.py
services/ingestion/app/routers/: documents.py
services/ingestion/app/schemas/: chunk.py  document.py
services/ingestion/app/storage/: minio_client.py
services/ingestion/app/workers/: ingestion_worker.py
services/observer/: .env.example  Dockerfile  pyproject.toml
services/observer/alembic/: env.py
services/observer/alembic/versions/: c30b471a535e_initial_observer_schema.py
services/observer/app/: consumer.py  db.py  dependencies.py  main.py
services/observer/app/core/: config.py
services/observer/app/models/: audit_log.py
services/observer/app/repositories/: audit_log.py
services/observer/app/routers/: audit_logs.py  stream.py
services/observer/app/schemas/: audit_log.py
services/retrieval/: .env.example  Dockerfile  pyproject.toml
services/retrieval/alembic/: env.py
services/retrieval/alembic/versions/: 0e3d2e95964c_initial_retrieval_schema.py  6a470f917f62_initial_retrieval_schema.py
services/retrieval/app/: dependencies.py  main.py
services/retrieval/app/core/: config.py
services/retrieval/app/models/: __init__.py  retrieval_log.py
services/retrieval/app/pipeline/: encoder.py  grounding.py  reranker.py  searcher.py
services/retrieval/app/repositories/: retrieval_log.py
services/retrieval/app/routers/: retrieval.py  stats.py
services/retrieval/app/schemas/: retrieval.py  search.py
services/workflow/: .env.example  Dockerfile  pyproject.toml
services/workflow/alembic/: env.py
services/workflow/alembic/versions/: 61babb030f64_initial_workflow_schema.py
services/workflow/app/: main.py
services/workflow/app/core/: config.py
services/workflow/app/engine/: checkpointer.py  graph.py  nodes.py
services/workflow/app/models/: workflow.py  workflow_run.py
services/workflow/app/repositories/: run.py  workflow.py
services/workflow/app/routers/: runs.py  stats.py  workflows.py
services/workflow/app/schemas/: run.py  workflow.py
services/workflow/app/workers/: workflow_worker.py
(+24 files in other folders)
