[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-evaluation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "stratum-libs",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
