[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-identity"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "bcrypt",
    "python-jose[cryptography]",
    "pydantic-settings",
    "redis",
    "structlog",
    "stratum-libs",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
