[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "redis",
    "structlog",
    "stratum-libs",
    "pymupdf4llm",
    "pymupdf",
    "pillow",
    "pytesseract",
    "sentence-transformers",
    "qdrant-client",
    "arq",
    "python-multipart",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
