[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-retrieval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "structlog",
    "stratum-libs",
    "sentence-transformers",
    "qdrant-client",
    "openai",
    "python-multipart",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
