[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "redis",
    "structlog",
    "stratum-libs",
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "openai",
    "arq",
    "httpx",
    "prometheus-fastapi-instrumentator==7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
